2020.2/html/_sources/host.rst.txt
Host
====

OpenCL host code for optimized interfacing with Xilinx Devices.

.. toctree::
   :maxdepth: 1
   :caption: List of Examples

   concurrent_kernel_execution.rst
   copy_buffer.rst
   data_transfer.rst
   device_query.rst
   debug_profile.rst
   errors.rst
   errors_cpp.rst
   hbm_bandwidth.rst
   hbm_bandwidth_pseudo_random.rst
   hbm_simple.rst
   host_global_bandwidth.rst
   iops_test.rst
   multiple_cus_asymmetrical.rst
   mult_compute_units.rst
   overlap.rst
   p2p_simple.rst
   p2p_bandwidth.rst
   p2p_overlap_bandwidth.rst
   p2p_fpga2fpga.rst
   p2p_fpga2fpga_bandwidth.rst
   slave_bridge_simple.rst
   slave_bridge_bandwidth.rst
   slave_bridge_copy_buffer.rst
   slave_bridge_copy_kernel.rst
   streaming_chain.rst
   streaming_custom_datatype.rst
   streaming_host_bandwidth.rst
   streaming_free_running_h2k.rst
   streaming_free_running_k2k.rst
   streaming_reg_access.rst
   device_only_buffer.rst
   streaming_k2k.rst
   streaming_k2k_mm.rst
   streaming_mm_mixed.rst
   streaming_multi_cus.rst
   streaming_simple.rst
